primeiros ajustes do javascript

--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -169,7 +169,7 @@ main button:hover {
         margin-block: 81px;
         max-width: 1160px;
         margin-inline: auto;
-    }""
+    }
 
     .assunto_icone {
         width: 56px;
