--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
     border-radius: 999px;
     padding: 4px;
     display: flex;
-    justify-content: flex;
+    justify-content: flex-end;
 }
 
 .tema button div {
