--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -58,12 +58,28 @@ header {
 }
 
 .assunto_icone {
-    background: var(--bg-acessibilidade);
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
+
+.assunto_icon.html {
+    background: var(--bg-html);
+}
+
+.assunto_icon.css {
+    background: var(--bg-css);
+}
+
+.assunto_icon.javacript {
+    background: var(--bg-javascript);
+}
+
+.assunto_icon.acessibilidade {
+    background: var(--bg-acessibilidade);
+}
+
 
 .assunto_icone img {
     width: 100%;
