--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -58,6 +58,7 @@ header {
 }
 
 .assunto_icone {
+    background: var(--bg-acessibilidade);
     width: 40px;
     height: 40px;
     padding: 5px;
@@ -152,7 +153,6 @@ main {
 
 .barra_progresso div {
     height: 100%;
-    width: 50%;
     background: var(--purple);
     border-radius: 999px;
 }
