adicionada a função de inserir o resultado na tela

--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -63,6 +63,22 @@ header {
     border-radius: 5px;
 }
 
+.assunto_icon.html {
+    background: var(--bg-html);
+}
+
+.assunto_icon.css {
+    background: var(--bg-css);
+}
+
+.assunto_icon.javacript {
+    background: var(--bg-javascript);
+}
+
+.assunto_icon.acessibilidade {
+    background: var(--bg-acessibilidade);
+}
+
 .assunto_icone img {
     width: 100%;
 }
